# stt

./: .gitignore  Justfile  LICENSE  README.md  flake.nix  fourmolu.yaml  stt.cabal
app/: Main.hs
app/Main/: Repl.hs
contrib/emacs/: stt.el
examples/: church.stt  lists.stt  recursion.stt
src/: STT.hs
src/STT/: Eval.hs  Parser.hs  Pretty.hs  Subst.hs  Syntax.hs
src/STT/Pretty/: SepBy.hs
src/STT/Typing/: BDD.hs  DNF.hs  DNFBool.hs  DNFInt.hs
src/STT/Typing/Classes/: BooleanAlgebra.hs
test/STT/Typing/: BDDSpec.hs  DNFBoolSpec.hs  DNFIntSpec.hs
test/STT/Typing/Classes/: BooleanAlgebraSpec.hs
